Creo un servicio para el carrito y lo hago observable, el carrito muestra los productos agregados

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,7 @@
 <h3>Carrito de Compras</h3>
+
+<ul>
+    <li *ngFor="let f of (cartList$ | async)">
+        {{ f.name }} : {{ f.quantity}}
+    </li>
+</ul>
