Retoco un poco el aspecto en general de la pagina y dejo que se carguen los muebles del mock para una mejor presentacion

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,13 +8,10 @@
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/about']">Sobre Nosotros</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
     </ul>
   </div>
 </nav>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
-<footer> {{title}} - 2020 </footer>
+<footer><p>{{title}} - 2020 </p></footer>
