--- a/src/app/furniture-about/furniture-about.component.html
+++ b/src/app/furniture-about/furniture-about.component.html
@@ -1,1 +1,8 @@
-<p>furniture-about works!</p>
+<article>
+    <section>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur repudiandae nesciunt soluta minus id veniam ad, saepe pariatur eligendi delectus non, accusantium ab alias ipsam officiis voluptatibus cum. Voluptatem, iure?</p>
+    </section>
+    <section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis itaque, ratione perferendis nihil, assumenda dolore repudiandae cupiditate maiores ipsa, voluptate sequi et soluta? Veritatis unde dolores illum sequi, sunt nostrum?</p>
+    </section>
+</article>
